--- a/main.html
+++ b/main.html
@@ -9,5 +9,12 @@
 	<script src="js/app.js"></script>
 </head>
 <body>
+
+<div class="main">
+	<div class="ryu">
+		<img src="images/ryu-standing-still.png" alt="ryu standing still">
+	</div>
+</div>
+
 </body>
 </html>
