--- a/main.html
+++ b/main.html
@@ -12,7 +12,11 @@
 
 <div class="main">
 	<div class="ryu">
-		<img src="images/ryu-standing-still.png" alt="ryu standing still">
+		<div class="ryu-still">
+			<img src="images/ryu-standing-still.png" alt="ryu standing still">
+		</div>
+		<div class="ryu-ready"></div>
+		<div class="ryu-throwing"></div>
 	</div>
 </div>
 
