ryu images and positioning

--- a/main.html
+++ b/main.html
@@ -12,11 +12,9 @@
 
 <div class="main">
 	<div class="ryu">
-		<div class="ryu-still">
-			<img src="images/ryu-standing-still.png" alt="ryu standing still">
-		</div>
-		<div class="ryu-ready"></div>
-		<div class="ryu-throwing"></div>
+		<div class="ryu_still"></div>
+		<div class="ryu_ready"></div>
+		<div class="ryu_throwing"></div>
 	</div>
 </div>
 
