--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		<div class="hadouken"></div>
 	</div>
 </div>
-
+<audio id="hadouken_sound" src="sound/hadouken.mp3">
 <script src="http://code.jquery.com/jquery.min.js"></script>
 <script src="js/app.js"></script>
 </body>
