--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
 		<div class="ryu_still"></div>
 		<div class="ryu_ready"></div>
 		<div class="ryu_throwing"></div>
+		<div class="ryu_cool"></div>
 		<div class="hadouken"></div>
 	</div>
 </div>
