--- a/main.html
+++ b/main.html
@@ -10,10 +10,10 @@
 
 <div class="main">
 	<div class="ryu">
-		<div class="ryu_still"></div>
-		<div class="ryu_ready"></div>
-		<div class="ryu_throwing"></div>
-		<div class="ryu_cool"></div>
+		<div class="ryu_still action"></div>
+		<div class="ryu_ready action"></div>
+		<div class="ryu_throwing action"></div>
+		<div class="ryu_cool action"></div>
 		<div class="hadouken"></div>
 	</div>
 </div>
