final save text add

--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
 
 <div class="main">
+	<p>Hover to animate Ryu. Click Ryu to discharge a Hadouken. Click X to change his stance.</p>
 	<div class="ryu">
 		<div class="ryu_still action"></div>
 		<div class="ryu_ready action"></div>
